--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -46,7 +46,6 @@
         <item>mobile_cas,24,0,3,60000,true</item>
         <item>mobile_xcap,27,0,2,60000,true</item>
         <item>mobile_ent1,28,0,2,-1,true</item>
-        <item>mobile_ent2,29,0,2,-1,true</item>
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
@@ -55,10 +54,8 @@
     <!-- An Array of "[ConnectivityManager connectionType],
                       [# simultaneous connection types]"  -->
     <string-array translatable="false" name="radioAttributes">
-        <!-- DEFAULT -->
-        <item>"1,1"</item>
-        <!-- MOBILE -->
-        <item>"0,1"</item>
+        <item>1,1</item>
+        <item>0,1</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
@@ -269,6 +266,11 @@
     <!-- Whether UI for multi user should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
 
-    <!-- Maximum number of supported users -->
+<!-- Indicate whether closing the lid causes the device to go to sleep and opening
+      it causes the device to wake up.
+      The default is false. -->
+    <bool name="config_lidControlsSleep">true</bool>
+
+<!-- Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
 </resources>
